syntax = "proto3";

package chats;

option go_package = "services/chats/api/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chats {
    rpc GetUserChats (GetUserChatsRequest) returns (GetUserChatsResponse);
    rpc GetChatMessages (GetChatMessagesRequest) returns (GetChatMessagesResponse);
    rpc StoreMessage (StoreMessageRequest) returns (google.protobuf.Empty);
    rpc FindOrCreateChat (FindOrCreateChatRequest) returns (FindOrCreateChatResponse);
}

message GetUserChatsRequest {
    string user_id = 1;
}

message GetUserChatsResponse {
    repeated string chat_ids = 1;
}

message GetChatMessagesRequest {
    string chat_id = 1;
    string user_id = 2;
}

message GetChatMessagesResponse {
    repeated Message messages = 1;
}

message StoreMessageRequest {
    string user_id = 1;
    string chat_id = 2;
    string text = 3;
}

message FindOrCreateChatRequest {
    string user_id_1 = 1;
    string user_id_2 = 2;
}
message FindOrCreateChatResponse {
    string chat_id = 1;
}

message Message {
    string uuid = 1;
    string user_id = 2;
    string chat_id = 3;
    string text = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}
